# voice-unreal-chatbox

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.bat  download_model.ps1  download_nllb.ps1  setup.ps1  voice-translation-demo.excalidraw
.claude/: settings.local.json
config/: profanity.txt
docs/: dev-log-2026-03-26.md  unreal-integration.md
scripts/: download_opus_mt.ps1  update-profanity.sh
src/: filter.cpp  filter.h  main.cpp  protocol.cpp  protocol.h  server.cpp  server.h  transcriber.cpp  transcriber.h  transcriber_pool.cpp  transcriber_pool.h  translator.cpp  translator.h
test_client/: test_client.cpp
tests/: test_filter.cpp  test_protocol.cpp  test_translator.cpp  test_wire_protocol.cpp
